[package]
name = "easy_random"
version = "0.1.4"
edition = "2021"
authors = ["https://github.com/at-75"]
description = "Generate random data easily with easy_random :)."
license = "MIT OR Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
